<resources>
    <string name="app_name">ManageXPence</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="removeAds">Remove Ads</string>
    <string name="descriptions">House Rent,Shopping,SuperMarket,Travel,Mortgage,Council Tax,House Bills,Entertainment</string>

    <string-array name="descriptions">
        <item>House Rent</item>
        <item>Shopping</item>
...
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_annual_chart">AnnualChartActivity</string>
    <string name="title_activity_savings_chart">AnnualSavingsActivity</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="title_activity_calculate_annual_expenses">CalculateAnnualExpensesActivity</string>
    <string name="maxbudgetvalue">2000</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="APP_KEY">h5x1321simc1oxm</string>
    <string name="sign_in">Sign in</string>
    <string name="leftYearButton">Left Year Button</string>
    <string name="rightYearButton">Right Year Button</string>
    <string name="income">Income</string>

...
