...
        android:layout_marginStart="-32dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/ImageView" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</RelativeLayout>
